@@ -34,7 +34,6 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.hisp.dhis.common.BaseIdentifiableObject;
@@ -42,6 +41,8 @@ import org.hisp.dhis.common.DeliveryChannel;
 import org.hisp.dhis.common.IdentifiableObject;
 import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.common.IllegalQueryException;
+import org.hisp.dhis.common.UID;
+import org.hisp.dhis.feedback.BadRequestException;
 import org.hisp.dhis.feedback.NotFoundException;
 import org.hisp.dhis.organisationunit.OrganisationUnitService;
 import org.hisp.dhis.outboundmessage.BatchResponseStatus;
@@ -106,7 +107,7 @@ public class DefaultProgramMessageService implements ProgramMessageService {
   @Override
   @Transactional(readOnly = true)
   public List<ProgramMessage> getProgramMessages(ProgramMessageOperationParams params)
-      throws NotFoundException {
+      throws NotFoundException, BadRequestException {
     ProgramMessageQueryParams queryParams = operationParamMapper.map(params);
 
     return programMessageStore.getProgramMessages(queryParams);
@@ -117,6 +118,28 @@ public class DefaultProgramMessageService implements ProgramMessageService {
   public long saveProgramMessage(ProgramMessage programMessage) {
     programMessageStore.save(programMessage);
     return programMessage.getId();
+  }
+
+  @Override
+  @Transactional
+  public void updateProgramMessage(UID uid, ProgramMessageStatus status) throws NotFoundException {
+    ProgramMessage persisted = programMessageStore.getByUid(uid.getValue());
+    if (persisted == null) {
+      throw new NotFoundException(ProgramMessage.class, uid.getValue());
+    }
+
+    persisted.setMessageStatus(status);
+    programMessageStore.update(persisted);
+  }
+
+  @Override
+  @Transactional
+  public void deleteProgramMessage(UID uid) throws NotFoundException {
+    ProgramMessage persisted = programMessageStore.getByUid(uid.getValue());
+    if (persisted == null) {
+      throw new NotFoundException(ProgramMessage.class, uid.getValue());
+    }
+    programMessageStore.delete(persisted);
   }
 
   @Override
@@ -137,7 +160,7 @@ public class DefaultProgramMessageService implements ProgramMessageService {
         programMessages.stream()
             .filter(this::hasDataWriteAccess)
             .map(this::setAttributesBasedOnStrategy)
-            .collect(Collectors.toList());
+            .toList();
 
     List<OutboundMessageBatch> batches = createBatches(populatedProgramMessages);
 
